--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,11 +1,11 @@
 <h2>Stupid Coaching</h2>
-<div class="card question">
-  <p><%= @question %></p>
-  <p>You</p>
+<div class="card bg-success text-white">
+  <p><b><%= @question %></b></p>
+  <p><i>You</i></p>
 </div>
-<div class="card answer">
-  <p><%= @answer %></p>
-  <p>Your coach</p>
+<div class="card bg-light text-black">
+  <p><b><%= @answer %></b></p>
+  <p><i>Your coach</i></p>
 </div>
 
 <p>Find me in app/views/questions/answer.html.erb</p>
